--- a/website/styles/comparstyle.css
+++ b/website/styles/comparstyle.css
@@ -1,5 +1,5 @@
-nav{
-    background-color: rgb(46, 139, 87);
+ynav{
+    background-color: rgb(0, 0, 0);
     padding: 5px;
 }
 
@@ -54,7 +54,7 @@ footer{
 }
 
 body{
-    background-color: black;
+    background-color: rgb(88, 88, 88);
     font-family: Verdana;
     margin: 0;
 }
@@ -75,7 +75,7 @@ body{
     margin-right: auto;
     margin-bottom: 5px;
     width: 40%;
-    border: 7px solid white;
+    border: 7px solid rgb(70, 36, 36);
 }
 
 .text{
@@ -83,7 +83,7 @@ body{
 }
 
 h1, h2{
-    color: rgba(46, 139, 87);
+    color: rgb(242, 247, 245);   
 }
 
 .logo{
